--- a/form-1.1.css
+++ b/form-1.1.css
@@ -320,3 +320,7 @@ body .cmxform .stNavMain .ui-corner-right {
   border-radius: 0;
   -webkit-border-radius: 0;
 }
+
+body .cmxform .ui-tabs .ui-tabs-nav li.ui-tabs-selected {
+  padding-bottom: 0px;
+}
