Updated position of navs

--- a/form-1.1.css
+++ b/form-1.1.css
@@ -303,6 +303,7 @@ body .cmxform .stNavMain li {
   cursor:pointer;
   margin:0;
   height:39px!important;
+  top: -41px!important;
 }
 
 body .cmxform .stNavMain li .ui-icon {
