--- a/form-1.1.css
+++ b/form-1.1.css
@@ -54,6 +54,7 @@ body .cmxform .form-tabs-header .ui-state-default a {
 
 body .cmxform select {
   height: 50px;
+  height: 60px\9;
 }
 
 body .cmxform input[type="text"], body .cmxform input[type="text"]:hover,
